Updated product name and version to 0.0.5, fixed wrong flatpack manifest

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: 'net.muspelheim.launcher'
-productName: 'Muspelheim-Launcher'
+productName: 'Muspelheim Launcher'
 artifactName: '${productName}-setup-${channel}_${version}-${os}_${arch}.${ext}'
 
 copyright: 'Copyright © 2025 Tyrthurey'
